# Softwaredesign

./: KAL.code-workspace  README.md  Selfstudy_session#KAL.ipynb  denavit.py  exercibe_B2  import numpy as np.py  pyproject.toml  python_ex1.py  setup.py
Selfstudysession_B/: Selfstudysession_B2#KAL.ipynb
Selfstudysession_C/: Sefstudysession_C#KAL.ipynb  calendar_tools.py
Selfstudysession_D/: Selfstudysession_D#KAL.ipynb
Selfstudysession_E/: Selfstudysession_E#KAL.ipynb
project_setup/: run_all_notebooks.py  setup.py
