[project]
name = "test"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Can Kal", email = "kc9667@mci4me.at\ngit config --global user.name BaeroBaer\n\ngit config --global user.email kc9667@mci4me.at"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
