[project]
name = "softwaredesigne-kal"
version = "0.1.0"
description = "Self study sessions B-E"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "pydantic",
  "jupyter",
  "nbconvert",
  "ipykernel"
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
check = "python -c \"import numpy, pandas, matplotlib, pydantic, jupyter; print('Imports OK')\""
notebook = "jupyter notebook"
run-notebooks = "python project_setup/run_all_notebooks.py"
